Add '1.21.2' sources