@@ -13,6 +13,7 @@ import java.util.stream.Stream;
 import net.minecraft.core.Holder;
 import net.minecraft.core.component.DataComponents;
 import net.minecraft.core.registries.BuiltInRegistries;
+import net.minecraft.util.context.ContextKey;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.component.BlockItemStateProperties;
 import net.minecraft.world.level.block.Block;
@@ -20,7 +21,6 @@ import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.level.block.state.StateDefinition;
 import net.minecraft.world.level.block.state.properties.Property;
 import net.minecraft.world.level.storage.loot.LootContext;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParam;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParams;
 import net.minecraft.world.level.storage.loot.predicates.LootItemCondition;
 
@@ -52,12 +52,12 @@ public class CopyBlockState extends LootItemConditionalFunction {
       return LootItemFunctions.COPY_STATE;
    }
 
-   public Set<LootContextParam<?>> getReferencedContextParams() {
-      return ImmutableSet.of(LootContextParams.BLOCK_STATE);
+   public Set<ContextKey<?>> getReferencedContextParams() {
+      return Set.of(LootContextParams.BLOCK_STATE);
    }
 
    protected ItemStack run(ItemStack var1, LootContext var2) {
-      BlockState var3 = (BlockState)var2.getParamOrNull(LootContextParams.BLOCK_STATE);
+      BlockState var3 = (BlockState)var2.getOptionalParameter(LootContextParams.BLOCK_STATE);
       if (var3 != null) {
          var1.update(DataComponents.BLOCK_STATE, BlockItemStateProperties.EMPTY, (var2x) -> {
             Iterator var3x = this.properties.iterator();
