@@ -1,17 +1,16 @@
 package net.minecraft.world.level.storage.loot.functions;
 
-import com.google.common.collect.ImmutableSet;
 import com.mojang.serialization.MapCodec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
 import java.util.List;
 import java.util.Set;
 import net.minecraft.core.component.DataComponents;
+import net.minecraft.util.context.ContextKey;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
 import net.minecraft.world.item.component.ResolvableProfile;
 import net.minecraft.world.level.storage.loot.LootContext;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParam;
 import net.minecraft.world.level.storage.loot.predicates.LootItemCondition;
 
 public class FillPlayerHead extends LootItemConditionalFunction {
@@ -31,13 +30,13 @@ public class FillPlayerHead extends LootItemConditionalFunction {
       return LootItemFunctions.FILL_PLAYER_HEAD;
    }
 
-   public Set<LootContextParam<?>> getReferencedContextParams() {
-      return ImmutableSet.of(this.entityTarget.getParam());
+   public Set<ContextKey<?>> getReferencedContextParams() {
+      return Set.of(this.entityTarget.getParam());
    }
 
    public ItemStack run(ItemStack var1, LootContext var2) {
       if (var1.is(Items.PLAYER_HEAD)) {
-         Object var4 = var2.getParamOrNull(this.entityTarget.getParam());
+         Object var4 = var2.getOptionalParameter(this.entityTarget.getParam());
          if (var4 instanceof Player) {
             Player var3 = (Player)var4;
             var1.set(DataComponents.PROFILE, new ResolvableProfile(var3.getGameProfile()));
