@@ -1,14 +1,13 @@
 package net.minecraft.world.level.storage.loot.predicates;
 
-import com.google.common.collect.ImmutableSet;
 import com.mojang.serialization.MapCodec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
 import java.util.Optional;
 import java.util.Set;
 import net.minecraft.advancements.critereon.DamageSourcePredicate;
+import net.minecraft.util.context.ContextKey;
 import net.minecraft.world.damagesource.DamageSource;
 import net.minecraft.world.level.storage.loot.LootContext;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParam;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParams;
 import net.minecraft.world.phys.Vec3;
 
@@ -26,13 +25,13 @@ public record DamageSourceCondition(Optional<DamageSourcePredicate> predicate) i
       return LootItemConditions.DAMAGE_SOURCE_PROPERTIES;
    }
 
-   public Set<LootContextParam<?>> getReferencedContextParams() {
-      return ImmutableSet.of(LootContextParams.ORIGIN, LootContextParams.DAMAGE_SOURCE);
+   public Set<ContextKey<?>> getReferencedContextParams() {
+      return Set.of(LootContextParams.ORIGIN, LootContextParams.DAMAGE_SOURCE);
    }
 
    public boolean test(LootContext var1) {
-      DamageSource var2 = (DamageSource)var1.getParamOrNull(LootContextParams.DAMAGE_SOURCE);
-      Vec3 var3 = (Vec3)var1.getParamOrNull(LootContextParams.ORIGIN);
+      DamageSource var2 = (DamageSource)var1.getOptionalParameter(LootContextParams.DAMAGE_SOURCE);
+      Vec3 var3 = (Vec3)var1.getOptionalParameter(LootContextParams.ORIGIN);
       if (var3 != null && var2 != null) {
          return this.predicate.isEmpty() || ((DamageSourcePredicate)this.predicate.get()).matches(var1.getLevel(), var3, var2);
       } else {
